[tool.poetry]
name = "bottelegram"
version = "0.1.0"
description = ""
authors = ["Fabio Marchesi <fmar@bendingspoons.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telebot = "^0.0.5"
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
